# gr-somac

./: CMakeLists.txt  MANIFEST.md  Readme.md  install-container.sh  install-pc.sh  install_gr-macprotocols.sh  install_gr-somac.sh  update_gr-somac_container.sh
apps/: config_interface_tuntap_1.sh  config_interface_tuntap_10.sh  config_interface_tuntap_11.sh  config_interface_tuntap_12.sh  config_interface_tuntap_13.sh  config_interface_tuntap_14.sh  config_interface_tuntap_15.sh  config_interface_tuntap_2.sh  config_interface_tuntap_3.sh  config_interface_tuntap_4.sh  config_interface_tuntap_5.sh  config_interface_tuntap_6.sh  config_interface_tuntap_7.sh  config_interface_tuntap_8.sh  config_interface_tuntap_9.sh  config_interface_tuntap_GATEWAY.sh  ping.py  ping2.py  ping3.py  ping4.py  ping5.py  ping6.py  rand_ping.py  rand_run.sh  run.sh  run2.sh  run3.sh  run4.sh  run5.sh  run6.sh
data/: profile_0.npy  profile_1.npy  profile_2.npy
docs/: README.somac
examples/: data_link.grc  data_link_trafficgen.grc  gauss_traffic_gen.grc  gaussian_traffic_gen.grc  wifi_FlexDataLink_TG_1.grc  wifi_FlexDataLink_TG_1.py  wifi_FlexDataLink_TG_2.grc  wifi_FlexDataLink_TG_2.py  wifi_FlexDataLink_TG_3.grc  wifi_FlexDataLink_TG_3.py  wifi_FlexDataLink_TG_4.grc  wifi_FlexDataLink_TG_4.py  wifi_FlexDataLink_TG_5.grc  (+41 more)
grc/: CMakeLists.txt  somac_EnsembleNNet.xml  somac_EsembleNNet.xml  somac_QLearning.xml  somac_RandomForest.xml  somac_SOMAC.xml  somac_broadcaster.xml  somac_decision.xml  somac_metrics_frame.xml  somac_metrics_gen.xml  somac_sensor.xml  somac_snr.xml
lib/: qa_somac.cc  (+13 more)
(+282 files in other folders)
